CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )
PROJECT( QtOSG )

SET( CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic -Wno-long-long" )

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_AUTOMOC ON )

FIND_PACKAGE( Qt4 REQUIRED QtCore QtGui QtOpenGL)
FIND_PACKAGE( OpenSceneGraph REQUIRED COMPONENTS osgGA osgUtil osgViewer osgDB osgManipulator)

INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${OPENSCENEGRAPH_INCLUDE_DIRS} )

SET( SOURCES
  MainWindow.cpp
  QtOSG.cpp
  OSGWidget.cpp
  custom_dragger.cpp
)

ADD_EXECUTABLE( qtosg ${SOURCES} )

message(  ${OPENSCENEGRAPH_LIBRARIES})
TARGET_LINK_LIBRARIES( qtosg
  ${OPENSCENEGRAPH_LIBRARIES}
  ${QT_LIBRARIES}
)
